@@ -44,7 +44,8 @@
     </table>
 
     <form method="get" action="success.html">
-      <input id='button_id' name='button_name' class='button_class' type="submit" value="Click Me">
+      <input id='button_id' name='button_name' class='button_class' type="submit" value="Click Me"/>
+      <input id='button_image_id' type='image' src='images/submit.gif' alt='Submit'/>
       <button type='button' id='btn_id' name='btn_name' class='btn_class'>Click Me Too</button>
     </form>
 
